--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="secao">
       <h2>Uma música só para você 🎵</h2>
       <iframe style="border-radius:12px"
-        src="https://open.spotify.com/intl-pt/track/7zlwr8sFKWXGKi1mYoaXus"
+        src="https://m.youtube.com/watch?v=0zootlQUGHo&list=RD0zootlQUGHo&start_radio=1&pp=ygUHU29sYW5pbqAHAQ%3D%3D"
         width="100%" height="152" frameBorder="0"
         allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
       </iframe>
