Replace image with a GIF in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div class="card etapa" id="etapa1">
     <h1>Você quer abri-lo? (≧◡≦)</h1>
-    <img src="assets/gatinho.png" class="imagem">
+    <img src="assets/img/nyqnxeb6y4.gif" class="gif">
     <button onclick="proximo()">Abra-o 💖</button>
   </div>
 
