Add new stage with gratitude message in index.html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
     </p>
     <button onclick="proximo()">Próximo ^w^</button>
   </div>
+  
+  <div class="card etapa hidden" id="etapa2.5">
+    <h1>Feliz Dia dos 💕</h1>
+    <p>
+      E obrigado por ficar aturando as minhas chatices.
+    </p>
+    <button onclick="proximo()">Próximo ^w^</button>
+  </div>
 
   <div class="card etapa hidden" id="etapa3">
     <h2>Nossas lembranças 📸</h2>
