--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div class="card etapa" id="etapa1">
     <h1>Você quer abri-lo? (≧◡≦)</h1>
-    <img src="assets/imagem" class="imagem">
+    <img src="assets/img/a7310f84a9147b8b47eae4c2bc5eefb0.jpg" class="imagem">
     <button onclick="proximo()">Abra-o 💖</button>
   </div>
 
