Replace photo1.jpg with Screenshot image

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="card etapa hidden" id="etapa3">
     <h2>Nossas lembranças 📸</h2>
     <div class="galeria">
-      <img src="assets/foto1.jpg">
+      <img src="assets/Screenshot_20251215_164900_Roblox.jpg">
       <img src="assets/foto2.jpg">
     </div>
     <button onclick="proximo()">Última surpresa 🎵</button>
