--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <h2>Nossas lembranças 📸</h2>
     <div class="galeria">
       <img src="assets/Screenshot_20251215_164900_Roblox.jpg">
-      <img src="assets/foto2.jpg">
+      <img src="assets/1751932483_118022306740532_1768709075334 (1).png">
     </div>
     <button onclick="proximo()">Última surpresa 🎵</button>
   </div>
