Add new image to the gallery in index.html

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <div class="galeria">
       <img src="assets/img/Screenshot_20251215_164900_Roblox.jpg">
       <img src="assets/img/1751932483_118022306740532_1768709075334 (1).png">
+      <img src="assets/img/a7310f84a9147b8b47eae4c2bc5eefb0.jpg">
     </div>
     <button onclick="proximo()">Última surpresa 🎵</button>
   </div>
