Update messages for Valentine's Day cards

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="card etapa hidden" id="etapa2">
     <h1>Feliz Dia dos Namorados 💕</h1>
     <p>
-      Eu sei que você talvez não esperasse isso,
+      Eu sei que você talvez esperava por isso,
       mas eu só queria te mostrar o quanto você
       significa pra mim.
     </p>
@@ -27,9 +27,10 @@
   </div>
   
   <div class="card etapa hidden" id="etapa5">
-    <h1>Feliz Dia dos 💕</h1>
+    <h1>Obrigado por sempre estar comigo Loh 💌</h1>
     <p>
-      E obrigado por ficar aturando as minhas chatices.
+      Eu nunca vou deixar de estar ao seu lado, não importa a situação seja nos bons e mau momentos.
+
     </p>
     <button onclick="proximo()">Próximo ^w^</button>
   </div>
