Update song dedication text in index.html

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
   </div>
 
   <div class="card etapa hidden" id="etapa4">
-    <h2>Uma música só para você 🎶</h2>
+    <h2>Eu te dedico essa música do Shaman 🎶</h2>
     <iframe 
       src="https://www.youtube.com/embed/0zootlQUGHo"
       allowfullscreen>
     </iframe>
-    <p>Eu te amo infinito ♾️</p>
+    <p>EU TE AMOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO ♾️</p>
   </div>
 
 </div>
