Update text in index.html for clarity and tone

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <div class="wrapper">
 
   <div class="card etapa" id="etapa1">
-    <h1>Você quer abri-lo? (≧◡≦)</h1>
+    <h1>Você quer abrir ? (≧◡≦)</h1>
     <img src="assets/img/a7310f84a9147b8b47eae4c2bc5eefb0.jpg" class="imagem">
-    <button onclick="proximo()">Abra-o 💖</button>
+    <button onclick="proximo()">Abrir 💖</button>
   </div>
 
   <div class="card etapa hidden" id="etapa2">
@@ -29,7 +29,7 @@
   <div class="card etapa hidden" id="etapa5">
     <h1>Obrigado por sempre estar comigo Loh 💌</h1>
     <p>
-      Eu nunca vou deixar de estar ao seu lado, não importa a situação seja nos bons e mau momentos.
+      Eu nunca vou deixar de estar ao seu lado, enquanto você estiver comigo eu prometo te fazer feliz.
 
     </p>
     <button onclick="proximo()">Próximo ^w^</button>
