Add new image to gallery in index.html

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <img src="assets/img/Screenshot_20251215_164900_Roblox.jpg">
       <img src="assets/img/1751932483_118022306740532_1768709075334 (1).png">
       <img src="assets/img/Screenshot_20260117_215645_Roblox.jpg">
+      <img src="Screenshot_20260207_182622_Roblox.jpg">
     </div>
     <button onclick="proximo()">Última surpresa 🎵</button>
   </div>
