Update message in etapa2 section of index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="card etapa hidden" id="etapa2">
     <h1>Feliz Dia dos Namorados 💕</h1>
     <p>
-      Eu sei que você talvez esperava por isso,
+      Eu sei que você talvez não esperava por isso,
       mas eu só queria te mostrar o quanto você
       significa pra mim.
     </p>
