--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       src="https://www.youtube.com/embed/0zootlQUGHo"
       allowfullscreen>
     </iframe>
-    <p>EU TE AMOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO ♾️</p>
+    <p>EU TE AMOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO </p>
   </div>
 
 </div>
