Add heart emoji to love message in index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
       src="https://www.youtube.com/embed/0zootlQUGHo"
       allowfullscreen>
     </iframe>
-    <p>EU TE AMOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO </p>
+    <p>EU TE AMOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO 
+    💞</p>
   </div>
 
 </div>
